--- a/app/css/libs.css
+++ b/app/css/libs.css
@@ -171,7 +171,7 @@ ul.bxslider {
 .hamburger {
   background: none;
   position: absolute;
-  top: 15px;
+  top: 30px;
   right: 10%;
   line-height: 45px;
   color: #999;
@@ -185,7 +185,7 @@ ul.bxslider {
 .cross {
   background: none;
   position: absolute;
-  top: 20px;
+  top: 32px;
   right: 10%;
   color: #999;
   border: 0;
@@ -202,10 +202,9 @@ ul.bxslider {
   transition: all 0.2s;
   font-weight: bold;
   width: 80%;
-  margin: 0 auto;
   background: #f1f1f1;
   position: absolute;
-  top: 10%;
+  top: 13%;
   text-align: center;
   font-size: 14px; }
 
@@ -258,3 +257,93 @@ ul.bxslider {
   font-size: 1.5em;
   margin-top: 5px;
   margin: 0 auto; }
+
+.hamburger {
+  background: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  line-height: 45px;
+  padding: 5px 15px 0px 15px;
+  color: #999;
+  border: 0;
+  font-size: 1.4em;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  z-index: 10000000000000; }
+
+.cross {
+  background: none;
+  position: absolute;
+  top: 0px;
+  right: 0;
+  padding: 7px 15px 0px 15px;
+  color: #999;
+  border: 0;
+  font-size: 3em;
+  line-height: 65px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  z-index: 10000000000000; }
+
+.menu {
+  z-index: 1000000;
+  font-weight: bold;
+  font-size: 0.8em;
+  width: 100%;
+  background: #f1f1f1;
+  position: absolute;
+  text-align: center;
+  font-size: 12px; }
+
+.menu ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  list-style-image: none; }
+
+.menu li {
+  display: block;
+  padding: 15px 0 15px 0;
+  border-bottom: #dddddd 1px solid; }
+
+.menu li:hover {
+  display: block;
+  background: #ffffff;
+  padding: 15px 0 15px 0;
+  border-bottom: #dddddd 1px solid; }
+
+.menu ul li a {
+  text-decoration: none;
+  margin: 0px;
+  color: #666; }
+
+.menu ul li a:hover {
+  color: #666;
+  text-decoration: none; }
+
+.menu a {
+  text-decoration: none;
+  color: #666; }
+
+.menu a:hover {
+  text-decoration: none;
+  color: #666; }
+
+.glyphicon-home {
+  color: white;
+  font-size: 1.5em;
+  margin-top: 5px;
+  margin: 0 auto; }
+
+header {
+  display: inline-block;
+  font-size: 12px; }
+
+span {
+  padding-left: 20px; }
+
+a {
+  color: #336699; }
